<resources>
    <string name="hello">Hello, let\'s calculate your tip</string>
    <string name="app_name">Tip Calculator</string>
    <string name="bill">Bill</string>
    <string name="tip_per">Tip Percentage (%)</string>
    <string name="tip">Tip</string>
    <string name="tips">Tip : %1$s</string>
    <string name="totals">Total : %1$s</string>
    <string name="split">Splitting the bill?</string>
    <string name="calc">Calculate Tip</string>
    <string name="total">Your total bill is %1$s</string>
    <string name="rate">Please rate the app</string>
    <string name="no_of_people">Number of People</string>
    <string name="each_of">Each of you will pay %1$s</string>
    <string name="done">Done</string>
</resources>