<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/layout">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bill_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello_text"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bill"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_per_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="@id/bill_text"
        app:layout_constraintEnd_toEndOf="@id/bill_text"
        app:layout_constraintTop_toBottomOf="@id/bill_text"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tip_per"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tip_per"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_per_text"
        android:layout_marginStart="16dp"
        android:text="@string/split"
        android:layout_marginLeft="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/no_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toEndOf="@id/split"
        app:layout_constraintEnd_toEndOf="@id/bill_text"
        app:layout_constraintTop_toBottomOf="@id/split"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/no_of_people"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/split"
        android:text="@string/calc"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="gone"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tip"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>